initializing deployment on github pages

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "http://GiuliaGiovannoli.github.io/space_news",
+  "homepage": "http://GiuliaGiovannoli.github.io/SpaceNews",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
